--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://github.com/foliojs/pdfkit/releases/download/v0.12.1/pdfkit.standalone.js"></script>
+    <script src="https://github.com/devongovett/blob-stream/releases/download/v0.1.3/blob-stream.js"></script>
+    <script src="https://www.verovio.org/javascript/latest/verovio-toolkit.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
